--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
   "author": "Konrad Kowalski <rootsher@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "nest start --watch",
+    "build": "nest build",
+    "start:prod": "node dist/main"
   },
   "dependencies": {
     "@nestjs/common": "^8.2.4",
     "@nestjs/core": "^8.2.4",
+    "@nestjs/platform-express": "^8.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.1"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^8.1.6",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.8",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.4"
   },
   "bugs": {
     "url": "https://github.com/rootsher/boilerplate-backend/issues"
