--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@nestjs/common": "^8.2.4",
     "@nestjs/core": "^8.2.4",
     "@nestjs/platform-express": "^8.2.4",
+    "@nestjs/swagger": "^5.1.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.5.1"
+    "rxjs": "^7.5.1",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.1.6",
